--- a/bin/src/main/resources/templates/index.html
+++ b/bin/src/main/resources/templates/index.html
@@ -502,7 +502,7 @@
             </div>
           </div>
 
-          <!--最新推荐-->
+          <!--最新推薦-->
           <div class="ui segments m-margin-top-large">
             <div class="ui secondary segment ">
               <i class="bookmark icon"></i>最新推荐
@@ -578,9 +578,9 @@
 		          <p class="m-text-thin m-text-spaced m-opacity-mini">這是我的個人部落格、分享關於健康、美食相關的任何内容，希望可以给來的人有所幫助</p>
 		        </div>
 		      </div>
-		      <div class="ui inverted section divider"></div>
-		      <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2023  Designed by HANK</p>
-		    </div>
+		       <div class="ui inverted section divider"></div>
+		     	  <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2023  Designed by HANK</p>
+		    	</div>
 		
 		  </footer>
 
