--- a/bin/src/main/resources/templates/about.html
+++ b/bin/src/main/resources/templates/about.html
@@ -44,17 +44,17 @@
         </div>
         <div class="five wide column">
           <div class="ui top attached segment">
-            <div class="ui header">关于我</div>
+            <div class="ui header">關於我</div>
           </div>
           <div class="ui attached segment">
-            <p class="m-text">李仁密，一个独立开发者，折腾在 0 和 1 世界的大叔；一个终身学习者，誓将学习无限循环. 希望结识可以共同成长的小伙伴.</p>
-            <p class="m-text">热爱编程，喜欢折腾，正在探索高效学习编程技术的方法...</p>
+            <p class="m-text">林翰，</p>
+            <p class="m-text">熱爱编程，喜歡開發，正在探索高效學習技術的方法...</p>
           </div>
           <div class="ui attached segment">
-            <div class="ui orange basic left pointing label">编程</div>
-            <div class="ui orange basic left pointing label">写作</div>
+            <div class="ui orange basic left pointing label">開發</div>
+            <div class="ui orange basic left pointing label">寫作</div>
             <div class="ui orange basic left pointing label">思考</div>
-            <div class="ui orange basic left pointing label">运动</div>
+            <div class="ui orange basic left pointing label">運動</div>
           </div>
           <div class="ui attached segment">
             <div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
@@ -94,27 +94,27 @@
           </div>
         </div>
         <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
+          <h4 class="ui inverted header m-text-thin m-text-spaced " >最新部落格</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
+            <a href="#" class="item m-text-thin">用戶故事（User Story）</a>
+            <a href="#" class="item m-text-thin">用戶故事（User Story）</a>
+            <a href="#" class="item m-text-thin">用戶故事（User Story）</a>
           </div>
         </div>
         <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
+          <h4 class="ui inverted header m-text-thin m-text-spaced ">聯繫資訊</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">Email：lirenmi@163.com</a>
-            <a href="#" class="item m-text-thin">QQ：865729312</a>
+            <a href="#" class="item m-text-thin">Email：hankyo0321@gmail.com</a>
+            <a href="#" class="item m-text-thin">Line: woosa0321</a>
           </div>
         </div>
-        <div class="seven wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-          <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
-        </div>
+  		<div class="seven wide column">
+			<h4 class="ui inverted header m-text-thin m-text-spaced ">部落格</h4>
+		     <p class="m-text-thin m-text-spaced m-opacity-mini">這是我的個人部落格、分享關於健康、美食相關的任何内容，希望可以给來的人有所幫助</p>
+		</div>
       </div>
       <div class="ui inverted section divider"></div>
-      <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Lirenmi Designed by Lirenmi</p>
+      <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017  Designed by HANK</p>
     </div>
 
   </footer>
