--- a/bin/src/main/resources/templates/tags.html
+++ b/bin/src/main/resources/templates/tags.html
@@ -310,29 +310,29 @@
             </div>
           </div>
         </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
+         <div class="three wide column">
+          <h4 class="ui inverted header m-text-thin m-text-spaced " >最新部落格</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
+            <a href="#" class="item m-text-thin">用戶故事（User Story）</a>
+            <a href="#" class="item m-text-thin">用戶故事（User Story）</a>
+            <a href="#" class="item m-text-thin">用戶故事（User Story）</a>
           </div>
         </div>
         <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
+          <h4 class="ui inverted header m-text-thin m-text-spaced ">聯繫資訊</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">Email：lirenmi@163.com</a>
-            <a href="#" class="item m-text-thin">QQ：865729312</a>
+            <a href="#" class="item m-text-thin">Email：hankyo0321@gmail.com</a>
+            <a href="#" class="item m-text-thin">Line: woosa0321</a>
           </div>
         </div>
         <div class="seven wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-          <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
-        </div>
+		     <h4 class="ui inverted header m-text-thin m-text-spaced ">部落格</h4>
+		      <p class="m-text-thin m-text-spaced m-opacity-mini">這是我的個人部落格、分享關於健康、美食相關的任何内容，希望可以给來的人有所幫助</p>
+		 </div>
       </div>
-      <div class="ui inverted section divider"></div>
-      <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Lirenmi Designed by Lirenmi</p>
-    </div>
+	 <div class="ui inverted section divider"></div>	
+		<p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2023  Designed by HANK</p>
+	 </div>
 
   </footer>
 
