--- a/src/main/resources/templates/admin/login 2.html
+++ b/src/main/resources/templates/admin/login 2.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="../static/css/all.css">
+    <title>登入</title>
+    <link rel="stylesheet" th:href="@{/css/all.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@800;900&family=Open+Sans:wght@800&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
@@ -41,7 +40,7 @@
         image.onload = function(){
             const rainEffect = new  RainyDay ({
                 image :this,
-                gravityAngle : Math.PI / 2,
+                gravityAngle : Math.PI /2,
                 fps :30,
             });
 
