--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -17,12 +17,12 @@
   <nav th:fragment = "menu(n)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">RH LIFE</h2>
-         <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==1} ? 'active'"><i class="mini home icon m-padded-lr-responsive"></i>首頁</a>
-        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==2} ? 'active'"><i class="mini idea icon  m-padded-lr-responsive"></i>  分類</a>
-        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==3} ? 'active'"><i class="mini tags icon  m-padded-lr-responsive"></i>  標籤</a>
-        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==4} ? 'active'"><i class="mini clone icon m-padded-lr-responsive "></i>  歸檔</a>
-        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==5} ? 'active'"><i class="mini info icon m-padded-lr-responsive "></i>關於我</a>
+        <h2 class="ui teal header item">盛唐</h2>
+         <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==1} ? 'active'"><i class="home icon mini m-padded-lr-responsive"></i>首頁</a>
+        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==2} ? 'active'"><i class=" idea icon mini m-padded-lr-responsive"></i>  分類</a>
+        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==3} ? 'active'"><i class=" tags icon mini m-padded-lr-responsive"></i>  標籤</a>
+        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==4} ? 'active'"><i class=" clone icon mini m-padded-lr-responsive "></i>  歸檔</a>
+        <a href="#" class="m-item item m-mobile-hide " th:classappend="${n==5} ? 'active'"><i class=" info icon mini m-padded-lr-responsive "></i>關於我</a>
         <div class="right m-item item m-mobile-hide">
           <div class="ui icon inverted transparent input m-margin-tb-tiny">
             <input type="text" placeholder="Search....">
