--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -123,7 +123,7 @@
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="../../static/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img  th:href="@{/images/wechat.jpg}" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
