--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:replace="admin/_fragments :: head(~{::title}) ">
+<head th:replace="~{admin/_fragments :: head(~{::title})} ">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>部落格管理</title>
@@ -10,7 +10,7 @@
 <body>
 
   <!--導覽列-->
-  <nav th:replace="_fragments :: menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav th:replace="~{_fragments :: menu(0)}" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">後台管理</h2>
@@ -59,7 +59,7 @@
   <br>
   <br>
   <!--底部footer-->
-  <footer th:replace ="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+  <footer th:replace ="~{admin/_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
