--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/all.css}">
+    
 </head>
 <body>
 	<h1>Hello 123</h1>
