--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head th:replace="_fragments :: head(~{::title})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{_fragments :: head(~{::title})}">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>部落格</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="../static/css/me.css" >
+  <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}" >
 </head>
 <body>
 
   <!--导航-->
-  <nav th:replace=" _fragments :: menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav th:replace="~{_fragments :: menu(1)}" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">RH LIFE</h2>
+        <h2 class="ui teal header item">盛唐</h2>
          <a href="#" class="m-item item m-mobile-hide "><i class="mini home icon m-padded-lr-responsive"></i>首頁</a>
         <a href="#" class="m-item item m-mobile-hide "><i class="mini idea icon  m-padded-lr-responsive"></i>  分類</a>
         <a href="#" class="m-item item m-mobile-hide "><i class="mini tags icon  m-padded-lr-responsive"></i>  標籤</a>
@@ -744,7 +744,7 @@
   <br>
   <br>
   <!--底部footer-->
-		  <footer  th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+		  <footer  th:replace="~{_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
 		    <div class="ui center aligned container">
 		      <div class="ui inverted divided stackable grid">
 		        <div class="three wide column">
@@ -780,7 +780,7 @@
 		
 		  </footer>
 
-<th:block  th:replace = "_fragments :: script"> 
+<th:block  th:replace = "~{_fragments :: script}"> 
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 </th:block>
